fix: 修复侧边栏闪屏问题

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -81,6 +81,10 @@ a:visited {
 
 .bg {
     background-color: #f5f5f5;
+    background-image: url("//ttfou.com/images/2023/02/02/7820455c3cfbd458a2144ffb9ed2e475.png");
+    background-repeat: no-repeat;
+    background-position: right bottom;
+    background-attachment: fixed;
 }
 
 .brsd {
@@ -93,4 +97,7 @@ a:visited {
 
 .bbsd {
     border-bottom: 1px solid #ddd;
+}
+.inner-wrapper-sticky {
+    overflow: hidden;
 }
