--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,9 +1,11 @@
 body {
     font-family: "JetBrainsMono-Medium";
 }
-body,html{
+
+body, html {
     height: 100%;
 }
+
 ul, ol {
     padding: 0;
 }
@@ -18,20 +20,16 @@ a {
     font-size: 100%;
 }
 
+a:visited {
+    color: #333;
+}
+
 a:hover, a:focus {
-    color: #0089ff;
+    color: #5cb9ff;
     text-decoration: none;
     cursor: pointer;
 }
 
-
-a:focus {
-    color: #333;
-}
-
-a:visited {
-    color: #333;
-}
 
 ::-webkit-scrollbar-track {
     background: rgb(238, 238, 238);
@@ -100,6 +98,7 @@ a:visited {
 .bbsd {
     border-bottom: 1px solid #ddd;
 }
+
 .inner-wrapper-sticky {
     overflow: hidden;
 }
