--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -83,7 +83,7 @@ img, svg {
 }
 
 .bg {
-    background-color: #f5f5f5;
+    /*background-color: #f5f5f5;*/
     background-repeat: no-repeat;
     background-size: cover;
     background-position: right bottom;
