--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -66,8 +66,16 @@ img, svg {
     margin-bottom: 10px;
 }
 
+.mgb50 {
+    margin-bottom: 50px;
+}
+
 .mgt10 {
     margin-top: 10px;
+}
+
+.mgt20 {
+    margin-top: 20px;
 }
 
 .pgt10 {
@@ -80,6 +88,10 @@ img, svg {
 
 .mgr10 {
     margin-right: 10px;
+}
+
+.mgr20 {
+    margin-right: 20px;
 }
 
 .bg {
