--- a/src/assets/markdown.scss
+++ b/src/assets/markdown.scss
@@ -92,6 +92,7 @@ $colors: $basecolor, lighten($basecolor, 2%), lighten($basecolor, 5%), lighten($
   code {
     background: #e9f8ff;
     color: #0d8bfb;
+    -webkit-text-fill-color: #0d8bfb;
     padding: 2px 4px;
     margin: 0 2px;
     border-radius: 4px;
